clusters/dev-cluster/podshouldbevalid.yaml
apiVersion: v1
kind: Pod
metadata:
  name: net-monitor
  namespace: default
spec:
  containers:
    - name: net-monitor
      image: ghcr.io/iheartnathan/net-monitor@sha256:02bb618f44c7f8b319c633074b9986870fca838985df62f84be7529a2ecf014e
      resources:
        requests:
          cpu: "100m"
          memory: "128Mi"
        limits:
          cpu: "500m"
          memory: "256Mi"
      ports:
        - containerPort: 80
