clusters/dev-cluster/verifysignature.yaml
apiVersion: kyverno.io/v2beta1
kind: ClusterPolicy
metadata:
  name: check-image-notary
spec:
  webhookConfiguration:
    failurePolicy: Fail
    timeoutSeconds: 30
  rules:
    - name: verify-signature-notary
      match:
        any:
        - resources:
            kinds:
              - Pod
      verifyImages:
      - type: Notary
        imageReferences:
        - "ghcr.io/iheartnathan/net-monitor*"
        failureAction: Enforce
        attestors:
        - count: 1
          entries:
          - certificates:
              cert: |-
                    -----BEGIN CERTIFICATE-----
                    MIIDSDCCAjCgAwIBAgIBfzANBgkqhkiG9w0BAQsFADBTMQswCQYDVQQGEwJVUzEL
[...]
                    uCUSxAmIBZygE12U8H2IISADRqoYDPnXE97QIg==
                    -----END CERTIFICATE-----
